log
Sat 09 Sep 2023 01:12:51 AM UTC: 
 hashmap.c | 11 ++++++++++-
 1 file changed, 10 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
60cf545
Sat 09 Sep 2023 01:14:27 AM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  1|5
total_score: 10/70
3bd5ba3
Sat 09 Sep 2023 01:14:47 AM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:54:10: error: redefinition of ‘index’
   54 |     long index = hash(key, map->capacity);
      |          ^~~~~
hashmap.c:43:6: note: previous definition of ‘index’ was here
   43 | long index = hash(key, map->capacity);
      |      ^~~~~
Compilation failed
123be8d
Sat 09 Sep 2023 01:17:33 AM UTC: 
 hashmap.c | 12 ------------
 1 file changed, 12 deletions(-)
 tests:  1|5
total_score: 10/70
1429951
Sat 09 Sep 2023 01:18:02 AM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
4b1ddf2
Sat 09 Sep 2023 01:24:04 AM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:90:33: error: expected ‘;’ before ‘return’
   90 |             map->current = index
      |                                 ^
      |                                 ;
   91 |             return map->buckets[index];
      |             ~~~~~~               
Compilation failed
2390684
Sat 09 Sep 2023 01:33:07 AM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
0a259df
